src/test/run-pass/issues/issue-27268.rs
// run-pass
fn main() {
    const _C: &'static Fn() = &||{};
}
